# reddup

./: .gitignore  ChangeLog.md  Foo.hs  LICENSE  README.md  common.nix  default.nix  git-stuff.cabal  notes.txt  package.yaml  reddup.cabal  shell.nix  stack.yaml
app/: Config.hs  Git.hs  Main.hs  ShellUtil.hs
lib/: Config.hs  Git.hs  Trackable.hs
nix/: ghcide.nix  sources.json
src/: Config.hs  Git.hs  GitParse.hs  Handler.hs  Options.hs  Reddup.hs  ShellUtil.hs  Trackable.hs
src/Handler/: Git.hs
src/Trackable/: Data.hs  Util.hs
