name:                reddup
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/joelmccracken/reddup#readme
license:             BSD3
license-file:        LICENSE
author:              Example Author Name
maintainer:          example@example.com
copyright:           2016 Example Author Name
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , turtle
                     , text >= 1.2.1
                     , directory >= 1.2.2.0
                     , unix >= 2.7.1
                     , parsec
                     , foldl >= 1.2.1
                     , yaml >= 0.8.22
  default-language:    Haskell2010

executable reddup
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , turtle
                     , reddup
                     , directory >= 1.2.2.0
                     , text >= 1.2.1
                     , unix >= 2.7.1
                     , parsec
                     , foldl >= 1.2.1
                     , yaml >= 0.8.22
  default-language:    Haskell2010
  other-modules:       Git
                     , GitParse

test-suite reddup-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , reddup
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/joelmccracken/reddup
